@@ -36,18 +36,9 @@
  * @{
  */
 
-/************************** DEBUG MODE DEFINITIONS *********************************/
-/* Un-comment the line below to compile the library in DEBUG mode, this will expanse
-   the "CHECK_PARAM" macro in the FW library code */
-
-#define DEBUG
-
 
 /******************* PERIPHERAL FW LIBRARY CONFIGURATION DEFINITIONS ***********************/
 /* Comment the line below to disable the specific peripheral inclusion */
-
-/* DEBUG_FRAMWORK ------------------------------ */
-#define _DBGFWK
 
 /* GPIO ------------------------------- */
 #define _GPIO
@@ -129,20 +120,7 @@
 
 /************************** GLOBAL/PUBLIC MACRO DEFINITIONS *********************************/
 
-#ifdef  DEBUG
-/*******************************************************************************
-* @brief		The CHECK_PARAM macro is used for function's parameters check.
-* 				It is used only if the library is compiled in DEBUG mode.
-* @param[in]	expr - If expr is false, it calls check_failed() function
-*                    	which reports the name of the source file and the source
-*                    	line number of the call that failed.
-*                    - If expr is true, it returns no value.
-* @return		None
-*******************************************************************************/
 #define CHECK_PARAM(expr) assert(expr)
-#else
-#define CHECK_PARAM(expr)
-#endif /* DEBUG */
 
 /**
  * @}
@@ -153,10 +131,6 @@
 /** @defgroup LIBCFG_DEFAULT_Public_Functions LIBCFG_DEFAULT Public Functions
  * @{
  */
-
-#ifdef  DEBUG
-void check_failed(uint8_t *file, uint32_t line);
-#endif
 
 /**
  * @}
